<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JPayApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="card_title">card_title</string>
    <string name="account_number">account_number</string>
    <string name="service_name">service_name</string>
    <string name="huankuan">还款</string>
    <string name="shoukuan">收款</string>
    <string name="infocenter">用户中心</string>
    <string name="wallettitle">本地钱包</string>
    <string name="walletcount">￥0</string>
    <string name="recharge">充值</string>
    <string name="cash">提现</string>
    <string name="faqs">常见问题</string>
    <string name="title_activity_recharge">充值</string>
    <string name="title_activity_cash">提现</string>
    <string name="title_activity_wallet">我的钱包</string>
    <string name="localTransactions">交易记录</string>
    <string name="title_activity_local_transactions">本地交易记录</string>
    <string name="title_wallet">我的钱包</string>
    <string name="picturedes"></string>
    <string name="title_activity_faq">常见疑问</string>
    <string name="cash_count_title">金额(￥)</string>
    <string name="recharge_count_edit_hint">请输入充值金额(￥)</string>
    <string name="cash_count_edit_hint">请输入提现金额(￥)</string>
    <string name="my_info">我的</string>
    <string name="back">返回</string>
    <string name="title_activity_faqdetail">FAQ</string>
    <string name="jiaoyi">交易</string>
    <string name="title_activity_login">登录</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_enter">简付</string>
    <string name="register_password">密码</string>
    <string name="register_get_sms_code">获取</string>
    <string name="register_sms_code">短信验证码</string>
    <string name="register_phone">手机号</string>
    <string name="register_name">真实姓名</string>
    <string name="register_bank">银行类型</string>
    <string name="register_id">身份证号</string>
    <string name="title_activity_setting_password">设置支付密码</string>
    <string name="hint_input_old_password">输入旧密码</string>
    <string name="hint_input_new_password">输入新密码</string>
    <string name="hint_reinput_new_password">再次输入新密码</string>
    <string name="confirm">确认</string>
    <string name="tips">如果第一次设置密码,则不需要输入旧密码</string>
    <string name="exit">退出</string>
    <string name="title_activity_jni">JniActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_ctime">CtimeActivity</string>
    <string name="title_activity_net_trans">充值与提现记录</string>
    <string name="all_trans_record">交易记录</string>
    <string name="balance">远程账户余额</string>
    <string name="net_trans">联网交易</string>
    <string name="next_page">下一页</string>
    <string name="title_activity_signature">SignatureActivity</string>

</resources>
