<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/bar_faqs"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/bt_setting_password__back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:text="@string/back"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_activity_setting_password"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal" >

            <EditText
                android:id="@+id/et_input_old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" 
                android:layout_marginTop="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/hint_input_old_password"
                android:padding="12dp"
                android:inputType="textPassword"
                android:textSize="17sp"/>
            <EditText android:id="@+id/et_input_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/hint_input_new_password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="17sp"/>
            <EditText android:id="@+id/et_reinput_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_reinput_new_password"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="17sp"/>
            
            <Button android:id="@+id/bt_confirm_setting_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:text="@string/confirm"
                android:background="@drawable/rechargebtn"/>
            
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="35dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:gravity="center"
                    android:text="@string/tips"
                    android:textColor="#AAAAFF" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>