<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/bar_wallet"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_wallet"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bt_all_transactions"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:background="@drawable/title_btn_right"
            android:text="@string/localTransactions"
            android:textColor="#fff"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/bar_wallet"
        android:gravity="center" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/wallet"
                    android:layout_marginTop="25dp"
                    android:contentDescription="@string/wallettitle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wallettitle"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/localWalletCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/walletcount"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/rechargeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/rechargebtn"
                    android:text="@string/recharge"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/cashBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/cashbtn"
                    android:text="@string/cash"
                    android:textColor="@android:color/background_dark" />

                <TextView
                    android:id="@+id/FAQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="35dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="15dp"
                    android:gravity="center"
                    android:background="@drawable/faqs_bg"
                    android:text="@string/faqs"
                    android:textColor="#AAAAFF" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>