<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/title_bar"
        android:gravity="center"
        android:text="@string/infocenter"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" 
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:background="@drawable/info_center_item">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/ic_launcher"
            android:layout_margin="5dp"
            android:contentDescription="@string/picturedes" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:textSize="18sp"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/settings"
        android:background="@drawable/info_center_item"
        android:textSize="17sp"
        android:text="@string/title_activity_setting_password" />

    <TextView
        android:id="@+id/settings1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:background="@drawable/info_center_item" />

    <TextView
        android:id="@+id/bt_exit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:text="@string/exit"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="#FF0000"
        android:background="@drawable/info_center_item" />

</LinearLayout>