<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" >

    <RelativeLayout
        android:id="@+id/bar_register"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_activity_register"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar_register" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <!--
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="25dp"
                android:background="@drawable/ic_launcher"
                android:contentDescription="@string/picturedes" />
            -->

            <EditText
                android:id="@+id/et_register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="12dp"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="17sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <Button
                    android:id="@+id/bt_get_sms_code"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="25dp"
                    android:background="@drawable/cashbtn"
                    android:padding="5dp"
                    android:text="@string/register_get_sms_code"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/sms_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_toStartOf="@id/bt_get_sms_code"
                    android:hint="@string/register_sms_code"
                    android:inputType="number"
                    android:padding="12dp"
                    android:textSize="17sp" />
            </RelativeLayout>

            <EditText
                android:id="@+id/et_register_real_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/register_name"
                android:padding="12dp"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_register_bankid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/register_bankid"
                android:padding="12dp"
                android:inputType="number"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_register_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/register_id"
                android:padding="12dp"
                android:textSize="17sp" />

            <Button
                android:id="@+id/bt_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:background="@drawable/rechargebtn"
                android:text="@string/title_activity_register" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/faqs_bg"
                android:gravity="center"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:text="@string/title_activity_login"
                android:textColor="#AAAAFF" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerInParent="true"
        android:visibility="invisible" />

</RelativeLayout>