<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.yunhuirong.jpayapp"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@drawable/tab_bg"
        android:weightSum="3" >

        

        <view.ChangeColorIconWithText
            android:id="@+id/indicator_jiaoyi"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tx_color="#ff45c01a"
            app:tx_icon="@drawable/ic_launcher"
            app:tx_text="@string/jiaoyi"
            app:tx_text_size="14sp" />

        <view.ChangeColorIconWithText
            android:id="@+id/indicator_wallet"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tx_color="#ff45c01a"
            app:tx_icon="@drawable/ic_launcher"
            app:tx_text="@string/wallettitle"
            app:tx_text_size="14sp" />
        
        <view.ChangeColorIconWithText
            android:id="@+id/indicator_my"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tx_color="#ff45c01a"
            app:tx_icon="@drawable/ic_launcher"
            app:tx_text="@string/my_info"
            app:tx_text_size="14sp" />
        
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tabBar" >
    </android.support.v4.view.ViewPager>

</RelativeLayout>