<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/bar_shoukuan"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/shoukuan_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:text="@string/back"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/shoukuan"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frame_shoukuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar_shoukuan"
        android:layout_gravity="center"
        android:layout_margin="20dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/picturedes"
            android:src="@drawable/card_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp" >

            <TextView
                android:id="@+id/card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text=""
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/card_account_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif"
                android:text=""
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_received_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:singleLine="true"
                android:textSize="42sp"
                android:textStyle="bold"
                android:width="360dp" />
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/bt_shoukuan_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/frame_shoukuan"
        android:background="@drawable/rechargebtn"
        android:text="@string/confirm" />

</RelativeLayout>