<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/bar_cash"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/cash_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:text="@string/back"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cash"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bar_cash"
        android:layout_marginTop="45dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/cash_count_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:drawableBottom="@drawable/edit_text_background"
                android:hint="@string/cash_count_edit_hint"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:padding="12dp"
                android:textSize="17sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/cashing_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rechargebtn"
            android:text="@string/cash"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>